cmake_minimum_required(VERSION 3.22)
project(CSES_Problem_Set)

set(CMAKE_CXX_STANDARD 17)

add_executable(CSES_Problem_Set src/Runner.cpp src/introductory_problems/WeirdAlgorithm.cpp src/introductory_problems/WeirdAlgorithm.h src/introductory_problems/MissingNumber.cpp src/introductory_problems/MissingNumber.h)
